[package]
name = "alertmanager-webhook"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
changecase = "0.0.7"
futures-util = { version = "0.3.27", default-features = false, features = [
  "std",
] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
opentelemetry_api = "0.20.0"
opentelemetry-otlp = { version = "0.13.0", features = [
  "http-proto",
  "grpc-tonic",
  "reqwest-client",
  "trace",
] }
opentelemetry_sdk = "0.20.0"
reqwest = { version = "0.11.22" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
tracing = "0.1"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = { version = "0.3", features = ["json"] }
