[package]
name = "alertmanager-webhook"
version = "0.10.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
axum-tracing-opentelemetry = { version = "0.24.0" }
changecase = "0.0.7"
http = { version = "1.0.0" }
init-tracing-opentelemetry = { version = "0.25.0", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-opentelemetry-instrumentation-sdk = { version = "0.24.0" }
